versioned_docs/version-4.2/start/installation/running-as-service.mdx
---
title: "Installation: Running as a Service"
sidebar_label: Running as a Service
sidebar_position: 3
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Installation: Running as a Service

* Running servers as OS services reduces downtime whenever a machine restarts because the servers automatically start every time the machine boots.  

* After completing the Server configuration process either via the [Setup Wizard](../../start/installation/setup-wizard.mdx) 
  or [Manually](../../start/installation/manual.mdx), you can register the Server as a Service using the `rvn` tool that can be found inside the RavenDB Server 
  distribution package.

* After registering RavenDB as a service, be sure to check your OS "Services" manager to see that the "RavenDB" service is there 
  and that the Startup Type is "Automatic".  

In this page: 

* [Windows](../../start/installation/running-as-service.mdx#windows)  
  * [Registering](../../start/installation/running-as-service.mdx#registering)  
  * [Unregistering](../../start/installation/running-as-service.mdx#unregistering)  
  * [Starting and Stopping](../../start/installation/running-as-service.mdx#starting-and-stopping)  
* [Linux - Ubuntu](../../start/installation/running-as-service.mdx#linux---ubuntu)  

<Admonition type="info" title="Prerequisites" id="prerequisites" href="#prerequisites">

The prerequisites for running RavenDB as a Service are defined [here](../../start/getting-started.mdx#prerequisites).  

</Admonition>

## Windows

### Registering

To register RavenDB as a Service on Windows OS, run PowerShell with administrator privileges.  
Navigate to the RavenDB package root and execute:  

<TabItem value="powershell" label="powershell">
<CodeBlock language="powershell">
{`.\\setup-as-service.ps1
`}
</CodeBlock>
</TabItem>

If you receive the following error:  
"setup-as-service.ps1 cannot be loaded. The file [YourFileLocation] is not digitally signed" 

1. Run the following command `Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass`.
2. Affirm the "Execution Policy Change" with `Y`. 
3. Run `.\setup-as-service.ps1` again.  

Alternatively, navigate to the node **Server** folder and execute the following command:  

<TabItem value="powershell" label="powershell">
<CodeBlock language="powershell">
{`.\\rvn.exe windows-service register --service-name RavenDB
`}
</CodeBlock>
</TabItem>

If you want to run the service under a non-default user (**Local Service** is default) then execute the following command:

<TabItem value="powershell" label="powershell">
<CodeBlock language="powershell">
{`.\\rvn.exe windows-service register --service-name RavenDB --service-user-name MyUser --service-user-password MyPassword
`}
</CodeBlock>
</TabItem>

### Unregistering

You can end the service using:

<TabItem value="powershell" label="powershell">
<CodeBlock language="powershell">
{`.\\uninstall-service.ps1
`}
</CodeBlock>
</TabItem>

Alternatively, use the 'unregister' command as follows:

<TabItem value="powershell" label="powershell">
<CodeBlock language="powershell">
{`.\\rvn.exe windows-service unregister --service-name RavenDB
`}
</CodeBlock>
</TabItem>

### Starting and Stopping

Service can be also controlled using the `start` and `stop` commands:

<TabItem value="powershell" label="powershell">
<CodeBlock language="powershell">
{`.\\rvn.exe windows-service stop --service-name RavenDB
.\\rvn.exe windows-service start --service-name RavenDB
`}
</CodeBlock>
</TabItem>



## Linux - Ubuntu

You can run RavenDB as a daemon by running the script `install-daemon.sh` from the package root.

Alternatively, open a bash terminal, and create the following file `/etc/systemd/system/ravendb.service`, using super-user permissions:

<TabItem value="bash" label="bash">
<CodeBlock language="bash">
{`[Unit]
Description=RavenDB NoSQL Database
After=network.target

[Service]
LimitCORE=infinity
LimitNOFILE=65535
LimitRSS=infinity
LimitAS=infinity
LimitMEMLOCK=infinity
TasksMax=infinity
StartLimitBurst=0
Restart=on-failure
Type=simple
TimeoutStopSec=300
User=<desired-user>
ExecStart=<path-to-RavenDB>/run.sh

[Install]
WantedBy=multi-user.target
`}
</CodeBlock>
</TabItem>

Note: Replace `<desired-user>` with your **username** and `<path-to-RavenDB>` with your **path**.

Then register the service and enable it on startup:
<TabItem value="bash" label="bash">
<CodeBlock language="bash">
{`systemctl daemon-reload
systemctl enable ravendb.service
`}
</CodeBlock>
</TabItem>

Start the service:
<TabItem value="bash" label="bash">
<CodeBlock language="bash">
{`systemctl start ravendb.service
`}
</CodeBlock>
</TabItem>

View its status using:
<TabItem value="bash" label="bash">
<CodeBlock language="bash">
{`systemctl status ravendb.service
`}
</CodeBlock>
</TabItem>
or
<TabItem value="bash" label="bash">
<CodeBlock language="bash">
{`journalctl -f -u ravendb.service
`}
</CodeBlock>
</TabItem>



